deploy/kustomize/base/core/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bmmi-web
  annotations:
    kube-score/ignore: pod-networkpolicy,container-ephemeral-storage-request-and-limit,container-security-context-readonlyrootfilesystem,container-security-context-user-group-id,container-security-context-privileged,container-security-context-readonlyrootfilesystem
  labels:
    app: bmmi-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bmmi-web
  template:
    metadata:
      labels:
        app: bmmi-web
    spec:
      containers:
        - name: php-apache
          image: karstensiemer/bmmi
          imagePullPolicy: Always
          ports:
            - containerPort: 80
              name: http
            - containerPort: 443
              name: https
          resources:
            requests:
              memory: '256Mi'
              cpu: '250m'
            limits:
              memory: '256Mi'
              cpu: '250m'
          readinessProbe:
            httpGet:
              path: /healthz/ready.php
              port: http
            timeoutSeconds: 3
            successThreshold: 3
          livenessProbe:
            httpGet:
              path: /healthz/live.php
              port: http
            initialDelaySeconds: 30
            timeoutSeconds: 3
          startupProbe:
            httpGet:
              path: /inc/setup-db.php
              port: http
            initialDelaySeconds: 30
            timeoutSeconds: 3
