deploy/kustomize/base/core/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: bmmi-web
spec:
  type: NodePort
  ports:
    - port: 80
      name: http
      targetPort: 80
    - port: 443
      name: https
      targetPort: 443
  selector:
    app: bmmi-web
